<resources>
    <string name="app_name">Lori</string>
    <string name="apiUrl">http://46.0.194.16:8080/app/dispatch/api/</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="btn_logout">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_ip_address">IP-address</string>
    <string name="settings_port_number">Port number</string>
    <string name="settings_apply">Apply</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_change_week">Change week</string>
    <string name="remove_time_entry">Remove entry</string>
    <string name="edit_time_entry">Edit Entry</string>
    <string name="spinner_project">Choose project</string>
    <string name="spinner_project_tasks">Choose tasks</string>
    <string name="save_time_entry">SAVE</string>
    <string name="time_entry_date">Date</string>
    <string name="time_entry_time">Time</string>
    <string name="time_entry_date_button">Choose date</string>
    <string name="time_entry_time_button">Choose time</string>
    <string name="menu_add_time_entry">Add Time Entry</string>
    <string name="date">Date:</string>
    <string name="task">Task:</string>
    <string name="time">Time:</string>
    <string name="project">Project:</string>
    <string name="remember_me">Remember Me</string>
</resources>
