<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_project" />

    <Spinner
        android:id="@+id/spinner_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_project_tasks" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/te_date"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/time_entry_date" />

        <Button
            android:id="@+id/te_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_entry_date_button" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:id="@+id/time_entry_time_text"
            android:hint="@string/time_entry_time" />

        <Button
            android:id="@+id/te_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_entry_time_button" />

    </LinearLayout>


    <Button
        android:id="@+id/save_time_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_time_entry" />

</LinearLayout>